# routes/post.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const protect = require('../middleware/auth');
 const upload = require('../middleware/imageUpload');
-const { createPost, getPosts, getPostsByUser, getFilteredPosts, updatePost, deletePost, likePost, unlikePost } = require('../controllers/postController');
+const { createPost, getPosts, getPostsByUser, getFilteredPosts, updatePost, deletePost, likePost, unlikePost, getPostsNearby } = require('../controllers/postController');
 const { validatePostCreation } = require('../validators/postValidator');
 const router = express.Router();
 
@@ -16,6 +16,9 @@ router.get('/paginate', protect, getFilteredPosts);
 
 // Récupérer tous les posts d'un utilisateur spécifique
 router.get('/user/:userId', protect, getPostsByUser);
+
+// Récupérer les posts proches d'une position géographique
+router.get('/nearby', protect, getPostsNearby);
 
 // Mettre à jour un post (seulement pour l'auteur)
 router.patch('/:id', protect, updatePost);
